force-app/main/default/objects/Obra__c/Obra__c.object-meta.xml
<CustomObject>
    <description>Contenedor para obras de un cliente</description>
    <label>Proyecto</label>
    <nameField>
        <label>Nombre de Obra</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Proyectos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>