force-app/main/default/objects/Obra__c/fields/Caja_cobro_expensas__c.field-meta.xml
<CustomField>
    <fullName>Caja_cobro_expensas__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Caja cobro expensas</label>
    <referenceTo>Caja__c</referenceTo>
    <relationshipLabel>Proyectos</relationshipLabel>
    <relationshipName>Proyectos</relationshipName>
    <type>Lookup</type>
</CustomField>