force-app/main/default/objects/Obra__c/fields/Caratula_para_informes_de_avance__c.field-meta.xml
<CustomField>
    <fullName>Caratula_para_informes_de_avance__c</fullName>
    <label>Caratula para informes de avance</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>