force-app/main/default/objects/Obra__c/fields/Construccion__c.field-meta.xml
<CustomField>
    <fullName>Construccion__c</fullName>
    <label>Construcción</label>
    <type>TextArea</type>
</CustomField>