force-app/main/default/objects/Obra__c/fields/Constructora__c.field-meta.xml
<CustomField>
    <fullName>Constructora__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Constructora</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Constructora</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipName>Obras1</relationshipName>
    <type>Lookup</type>
</CustomField>