force-app/main/default/objects/Obra__c/fields/Coordinador_de_obra__c.field-meta.xml
<CustomField>
    <fullName>Coordinador_de_obra__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Coordinador de obra</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Proveedor</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Proyectos (Coordinador de obra)</relationshipLabel>
    <relationshipName>Proyectos6</relationshipName>
    <type>Lookup</type>
</CustomField>