force-app/main/default/objects/Obra__c/fields/Destino__c.field-meta.xml
<CustomField>
    <fullName>Destino__c</fullName>
    <label>Destino</label>
    <type>TextArea</type>
</CustomField>