force-app/main/default/objects/Obra__c/fields/Destino_de_obra__c.field-meta.xml
<CustomField>
    <fullName>Destino_de_obra__c</fullName>
    <label>Destino de obra</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Vivienda multifamiliar</fullName>
            </value>
            <value>
                <fullName>Oficinas</fullName>
            </value>
            <value>
                <fullName>Mixto</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>