force-app/main/default/objects/Obra__c/fields/Duracion__c.field-meta.xml
<CustomField>
    <fullName>Duracion__c</fullName>
    <label>Duración</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>