force-app/main/default/objects/Obra__c/fields/Etapa__c.field-meta.xml
<CustomField>
    <fullName>Etapa__c</fullName>
    <label>Etapa</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>En analisis</fullName>
            </value>
            <value>
                <fullName>En aprobacion de planos</fullName>
            </value>
            <value>
                <fullName>Planos aprobados</fullName>
            </value>
            <value>
                <fullName>En demolicion</fullName>
            </value>
            <value>
                <fullName>Demolido</fullName>
            </value>
            <value>
                <fullName>En ejecucion</fullName>
            </value>
            <value>
                <fullName>Terminado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>