force-app/main/default/objects/Obra__c/fields/Fecha_de_finalizacion_estimada__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_finalizacion_estimada__c</fullName>
    <label>Fecha de finalización estimada</label>
    <type>Date</type>
</CustomField>