force-app/main/default/objects/Obra__c/fields/Fecha_de_registro__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_registro__c</fullName>
    <label>Fecha de registro</label>
    <type>Date</type>
</CustomField>