force-app/main/default/objects/Obra__c/fields/Marca__c.field-meta.xml
<CustomField>
    <fullName>Marca__c</fullName>
    <label>Marca</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>VIA</fullName>
            </value>
            <value>
                <fullName>MOOD</fullName>
            </value>
            <value>
                <fullName>NETTING</fullName>
            </value>
            <value>
                <fullName>CO-LIVING</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>