force-app/main/default/objects/Obra__c/fields/Memoria__c.field-meta.xml
<CustomField>
    <fullName>Memoria__c</fullName>
    <label>Memoria</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>