force-app/main/default/objects/Obra__c/fields/Nomenclatura_catastral__c.field-meta.xml
<CustomField>
    <fullName>Nomenclatura_catastral__c</fullName>
    <label>Nomenclatura catastral</label>
    <type>TextArea</type>
</CustomField>