force-app/main/default/objects/Obra__c/fields/Numero_de_expediente__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_expediente__c</fullName>
    <label>Numero de expediente</label>
    <type>TextArea</type>
</CustomField>