force-app/main/default/objects/Obra__c/fields/Observaciones_de_etapa__c.field-meta.xml
<CustomField>
    <fullName>Observaciones_de_etapa__c</fullName>
    <label>Observaciones de etapa</label>
    <type>TextArea</type>
</CustomField>