force-app/main/default/objects/Obra__c/fields/Proyectista__c.field-meta.xml
<CustomField>
    <fullName>Proyectista__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Proyectista</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Proveedor</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Proyectos (Proyectista)</relationshipLabel>
    <relationshipName>Proyectos2</relationshipName>
    <type>Lookup</type>
</CustomField>