force-app/main/default/objects/Obra__c/fields/Proyecto__c.field-meta.xml
<CustomField>
    <fullName>Proyecto__c</fullName>
    <label>Proyecto</label>
    <type>TextArea</type>
</CustomField>