force-app/main/default/objects/Obra__c/fields/Proyecto_de_la_constructora__c.field-meta.xml
<CustomField>
    <fullName>Proyecto_de_la_constructora__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Proyecto de la constructora Rosbaco?</label>
    <type>Checkbox</type>
</CustomField>