force-app/main/default/objects/Obra__c/fields/Representante_tecnico__c.field-meta.xml
<CustomField>
    <fullName>Representante_tecnico__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Representante tecnico</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Proveedor</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Proyectos (Representante tecnico)</relationshipLabel>
    <relationshipName>Proyectos4</relationshipName>
    <type>Lookup</type>
</CustomField>