force-app/main/default/objects/Obra__c/fields/Responsable_seguridad_e_hi__c.field-meta.xml
<CustomField>
    <fullName>Responsable_seguridad_e_hi__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Responsable seguridad e hi</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Proveedor</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Proyectos (Responsable seguridad e hi)</relationshipLabel>
    <relationshipName>Proyectos3</relationshipName>
    <type>Lookup</type>
</CustomField>