force-app/main/default/objects/Obra__c/fields/sociedad_que_desarrolla__c.field-meta.xml
<CustomField>
    <fullName>sociedad_que_desarrolla__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Cuenta del cliente al que pertenece la obra</description>
    <inlineHelpText>Cuenta del cliente al que pertenece la obra</inlineHelpText>
    <label>Sociedad que desarrolla</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Sociedad desarrolladora</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipName>Obras_que_desarrolla</relationshipName>
    <type>Lookup</type>
</CustomField>