force-app/main/default/objects/Obra__c/fields/Superficie__c.field-meta.xml
<CustomField>
    <fullName>Superficie__c</fullName>
    <inlineHelpText>En metros cuadrados</inlineHelpText>
    <label>Superficie terreno</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>