force-app/main/default/objects/Obra__c/fields/Superficie_a_contruir__c.field-meta.xml
<CustomField>
    <fullName>Superficie_a_contruir__c</fullName>
    <label>Superficie a contruir</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>