force-app/main/default/objects/Obra__c/fields/Tipo_de_obra__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_obra__c</fullName>
    <label>Tipo de obra</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Obra nueva</fullName>
            </value>
            <value>
                <fullName>Ampliación</fullName>
            </value>
            <value>
                <fullName>Remodelación</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>