force-app/main/default/objects/Obra__c/fields/Tipologia__c.field-meta.xml
<CustomField>
    <fullName>Tipologia__c</fullName>
    <label>Tipologia</label>
    <type>TextArea</type>
</CustomField>